@@ -587,9 +587,17 @@ class TypesTests(unittest.TestCase):
         test( 1.0, '+f', '+1.000000')
         test(-1.0, '+f', '-1.000000')
         test(1.1234e90, 'f', '1.1234e+90')
-        test(1.1234e90, 'F', '1.1234e+90')
+        test(1.1234e90, 'F', '1.1234E+90')
         test(1.1234e200, 'f', '1.1234e+200')
-        test(1.1234e200, 'F', '1.1234e+200')
+        test(1.1234e200, 'F', '1.1234E+200')
+        test(1e100, 'x<20f', '1e+100xxxxxxxxxxxxxx')
+        test(1e100, 'x<20F', '1E+100xxxxxxxxxxxxxx')
+        test(float('nan'), 'f', 'nan')
+        test(float('nan'), 'F', 'NAN')
+        test(float('inf'), 'f', 'inf')
+        test(float('inf'), 'F', 'INF')
+        test(float('-inf'), 'f', '-inf')
+        test(float('-inf'), 'F', '-INF')
 
         test( 1.0, 'e', '1.000000e+00')
         test(-1.0, 'e', '-1.000000e+00')
